--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>雷普先辈</title>
-    <meta itemprop="name" content="雷普先辈" />
-    <meta itemprop="description" content="新概念Homo游戏" />
+    <title>吃掉桃桃 ---执念酱改</title>
+    <meta itemprop="name" content="吃掉桃桃" />
+    <meta itemprop="description" content="新概念音游" />
     <meta itemprop="image" content="https://www.thac.cc/kano/res/logo.jpg" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
@@ -31,10 +31,10 @@
         <div class="welcome-bg FILL"></div>
         <div class="FILL BOX-M" style="position:absolute;top:0;left:0;right:0;bottom:0;z-index:5;">
             <div style="margin:0 8% 0 9%;">
-                <div style="font-size:2.6em; color:#FEF002;">新概念Homo游戏</div><br />
+                <div style="font-size:2.6em; color:#FEF002;">新概念音游</div><br />
                 <div style="font-size:2.2em; color:#fff; line-height:1.5em;">
-                    从最底下先辈开始<br />
-                    看看你20秒能雷普多少个<br />
+                    从最底下桃桃开始<br />
+                    看看你20秒能吃掉多少个桃桃<br />
                 </div>
                 <br />
                 <div id="btn_group" style="display: block;">
